web_error_2.txt
    Checking deve_web v0.0.1 (E:\gitclone\Deve-Note\apps\web)
warning: unused import: `leptos::prelude::*`
 --> apps\web\src\i18n.rs:1:5
  |
1 | use leptos::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no method named `read_only` found for struct `leptos::prelude::ReadSignal<T, S>` in the current scope
   --> apps\web\src\editor\hook.rs:191:34
    |
191 |         is_playback: is_playback.read_only(),
    |                                  ^^^^^^^^^ method not found in `leptos::prelude::ReadSignal<bool>`

error[E0599]: no method named `read_only` found for struct `leptos::prelude::ReadSignal<T, S>` in the current scope
   --> apps\web\src\editor\hook.rs:192:44
    |
192 |         playback_version: playback_version.read_only(),
    |                                            ^^^^^^^^^ method not found in `leptos::prelude::ReadSignal<u64>`

error[E0599]: no method named `read_only` found for struct `leptos::prelude::ReadSignal<T, S>` in the current scope
   --> apps\web\src\editor\hook.rs:193:38
    |
193 |         local_version: local_version.read_only(),
    |                                      ^^^^^^^^^ method not found in `leptos::prelude::ReadSignal<u64>`

For more information about this error, try `rustc --explain E0599`.
warning: `deve_web` (bin "deve_web") generated 1 warning
error: could not compile `deve_web` (bin "deve_web") due to 3 previous errors; 1 warning emitted
